Service workers fully done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="grey lighten-4">
 
     <!--TOP NAV-->
-  <nav class="z-depth-1">
+  <nav style="background-color: #ffe1c4 !important;" class="z-depth-1">
       <div class="nav-wrapper container">
           <a href="">Food <span>Ninja</span></a>
           <span class="right grey-text text-darken-1">
@@ -33,9 +33,9 @@
   <ul id="side-menu" class="sidenav side-menu">
       <li><a href="subheader">FOODNINJA</a></li>
       <li><a href="">Home</a></li>
-      <li><a href="/page/about.html" class="waves-effect">About</a></li>
+      <li><a href="/pages/about.html" class="waves-effect">About</a></li>
       <li><div class="divider"></div></li>
-      <li><a href="/page/contact.html" class="waves-effect">
+      <li><a href="/pages/contact.html" class="waves-effect">
         <i class="material-icons">mail_outline</i>Contact</a>
     </li>
   </ul>
@@ -108,6 +108,14 @@
       </div>
     </form>
   </div>
+
+  <style lang="">
+    class{
+      color: #ffe902;
+      color: #ffe1c4;
+      color-interpolation-filters: #ffe1c4;
+    }
+  </style>
 
 
    
