--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Food Ninja</title>
   <!-- materialize icons, css & js -->
-  <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" href="/css/styles.css" rel="stylesheet">
-  <script type="text/javascript" src="/js/materialize.min.js"></script>
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
   <meta name="apple-mobile-web-app-status-bar" content="#ffe1c4"> 
@@ -17,7 +19,7 @@
 <body class="grey lighten-4">
 
   <!-- top nav -->
-  <nav class="z-depth-0">
+  <nav style="background-color: #ffe1c4 !important;" class="z-depth-0">
     <div class="nav-wrapper container">
       <a href="/">Food<span>Ninja</span></a>
       <span class="right grey-text text-darken-1">
@@ -51,5 +53,6 @@
 
   <script src="/js/app.js"></script>
   <script src="/js/ui.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
