--- a/pages/fallback.html
+++ b/pages/fallback.html
@@ -11,7 +11,6 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" href="/css/styles.css" rel="stylesheet">
-
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
   <meta name="apple-mobile-web-app-status-bar" content="#ffe1c4"> 
@@ -41,10 +40,10 @@
   </ul>
 
   <!-- content -->
-  <div class="container grey-text">
-    <h5 class="center">About Food Ninja</h5>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus, porro voluptatum illum veniam eaque sunt sit labore provident eligendi! Voluptate amet suscipit inventore unde maxime atque impedit officia nobis laboriosam!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptatibus omnis, ea doloremque exercitationem id necessitatibus. Voluptatem officiis cupiditate commodi totam, hic laborum est ducimus amet iure, non dignissimos illo.</p>
+  <div class="container grey-text center">
+      <h5>OOPS!</h5>
+      <p>Currently You Can't View This Page Offline</p>
+      <a href="/" class="btn-small orange"> Go to Homepage</a>
   </div>
 
   <script src="/js/app.js"></script>
